# TopoStats

./: .codespellrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .testmondata-shm  .testmondata-wal  339-2_TFOovernight_TFbuffer.0_00002.tiff  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  INSTALL.md  MANIFEST.in  New_Tracing.py  Origamirecognition.py  Plotting.py  Process_jpkfiles_largeandsmall.py  README.md  RI_config.yaml  SPRplot.py  TAF_trace_optimisation_first_pass_annotated.ipynb  TFOplot.py  Tests2.py  Tests3.ipynb  TopoStats.csv  TopoStats.json  Tracing.py  asd_file_format.ipynb  average_curvature.ipynb  bacterial_image_processing.py  beaks-data-first-look.ipynb  beaks-data-topostats-first-look.ipynb  beaks-grab-good-images.ipynb  beaks-grain-dictionary-all.ipynb  beaks-grain-dictionary-beaks.ipynb  beaks-initial-investigation.ipynb  beaks-process-grain-dictionary.ipynb  (+77 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
Bradley/: Figure.ipynb  Node_Coordination.ipynb  Strand_Allignment.ipynb  best_so_far.ipynb  bradley.ipynb  improved_curvature.ipynb  manual_detection.ipynb  network_stats.py  stats.ipynb
Coordinates/: minicircle_1.csv  minicircle_2.csv  minicircle_3.csv
Flattening development/: config.yaml  flattening.ipynb  flattening_test_images.ipynb  processing_functions.py  scars.ipynb  topo_flattening.ipynb
GrainStatistics/: minicircle.spm.json
atst/: config.yaml
cats2/: cat_conf.yaml
catsnet/: catsnet.ipynb  catsnet_batches_any_size.ipynb  catsnet_multiclass.ipynb  catsnet_single_class_batched_cropped.ipynb  confirmation_report_examples.ipynb  crop_images.ipynb  file_rename.py  multi_class_labels.ipynb  multi_class_unet.py  process_images.ipynb  regular_methods.ipynb  saving_flattened_images.ipynb  si_masking_figure.ipynb  unet.py
concat/: concat_config.yaml  config.yaml
config/: .example.yaml  example.yaml  plotting_config.yml
damage/: picoz-damage-analysis.ipynb  stats.ipynb
data/: config.yaml
debugutils/: dummy_display.sh  python
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev-scripts/: plot_curvature.py
development_scars/: scars_manual_detection.ipynb
docs/: advanced.md  conf.py  configuration.md  contributing.md  data_dictionary.md  disordered_tracing.md  faq.md  glossary.md  index.md  index.rst  installation.md  introduction.md  modules.rst  nodestats.md  notebooks.md  readthedocs.yml  related_software.md  topostats.dnatracing.rst  topostats.filters.rst  topostats.find_grains.rst  topostats.grains.rst  topostats.io.rst  topostats.plottingfuncs.rst  topostats.pygwytracing.rst  topostats.rst  topostats.topotracing.rst  topostats.tracingfuncs.rst  topostats.utils.rst  usage.md  workflow.md  workflow_knot_detangling.md
hariborings/: cas9_analysis.ipynb  cas9_analysis_again.ipynb  cas9_segment_and_get_masks.ipynb  checking_csv_graphs_and_saving_to_xlsx.ipynb  chop_up_ring_masks.ipynb  cnn_classification.py  collate_data.ipynb  compare_training_images_masks.ipynb  crop_images.py  curvature_and_height_traces.ipynb  demo.ipynb  dna_only_analysis.ipynb  dna_only_classification.ipynb  dna_only_comparison.ipynb  dna_only_extract_molecules_from_flattened_images.ipynb  dna_only_graphs.ipynb  feret_comparison.ipynb  figure_1.ipynb  figure_1_ferets.ipynb  figure_1_metrics.ipynb  file_rename.ipynb  file_rename.py  file_resize.ipynb  haribonet.ipynb  haribonet_ROI_single_class.ipynb  haribonet_multiclass.ipynb  haribonet_single_class.ipynb  hariboscripts.py  poster.ipynb  poster_splining.ipynb  si_figure.ipynb  spline_to_pixels.ipynb  stats_comparison.ipynb  stats_tests_ferets.ipynb  tobi_curvature.ipynb  trace_find_deepest_regions.ipynb  trace_ring.ipynb  trace_ring_copy.ipynb  unbound_mask_visualisation.ipynb  unet.py  (+1 more)
latest/: 404.html  index.html  index.rst  objects.inv  sitemap.xml
main/: .buildinfo  advanced.html  configuration.html  contributing.html  data_dictionary.html  faq.html  genindex.html  glossary.html  index.html  installation.html  introduction.html  notebooks.html  objects.inv  py-modindex.html  related_software.html  search.html  searchindex.js  usage.html  workflow.html
masking_improvements/: saving_images.ipynb
new_output/: config.yaml
notebooks/: 00-Walkthrough-minicircle.ipynb  00-Walkthrough-minicircple.ipynb  01-Summary-statistics-and-plots.ipynb  01-Walkthrough-interactive.ipynb  01-Walkthrough-minicircle.ipynb  02-Summary-statistics-and-plots.ipynb  02-Summary-statistics-and-plots.py  03-Plotting-scans.ipynb  03-Plotting-scans.py  457-investigation.ipynb  Extract Single Grain.ipynb  Notebook_template.ipynb  OUTDATED-00-Walkthrough-minicircle.ipynb  OUTDATED-02-Summary-statistics-and-plots.ipynb  OUTDATED-03-Plotting-scans.ipynb  Plotting traces.ipynb  Pruning.ipynb  TopoStats and Skan Walkthrough.ipynb  bin_width.ipynb  contact_sheet.ipynb  contributing_to_topostats.py  grainstats.py  skan.ipynb  skan_examples_pruning.ipynb  skan_tests.ipynb  topostats_file_helper_example.ipynb  tracestats.py
output/: config.yaml
perovskite/: flatten_images.ipynb  perovskite_flattening.py  perovskite_plotting.py  perovskite_unet.ipynb  splitting_training_data.ipynb  textured_silicon.ipynb  triangles.ipynb  unet.py
pySPM_Tests/: Tests.ipynb
remove_gwyddion_experiments/: background_curve_fitting.ipynb
segmentation/: crop_images.py  haribonet_multiclass.ipynb  haribonet_single_class.ipynb  label_images.py
temp_folder/: temp_loadasd.ipynb
tests/: __init__.py  conftest.py  generate_expected_ridges.ipynb  test_array_manipulation.py  test_classes.py  test_config.py  test_dnatracing.py  test_dnatracing_minicircle.py  test_entry_point.py  test_filters.py  test_filters_minicircle.py  test_find_grains.py  test_find_grains_minicircle.py  test_grain_finding_minicircle.py  test_grains.py  test_grains_minicircle.py  test_grainstats.py  test_grainstats_minicircle.py  test_hariboscripts.py  test_io.py  test_logs.py  test_maths.py  test_nodestats_regression.py  test_nodestats_smoke.py  test_plotting.py  test_scars.py  (+14 more)
(+2359 files in other folders)
