[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  ]
build-backend = "setuptools.build_meta"

[project]
name = "topostats"
description = "Automated Analysis for Atomic Force Microscopy Images of Biomolecules"
readme = "README.md"
license = {text = "GNU Lesser GPLv3 only"}
dynamic = ["version"]
authors = [
  {name = "TopoStats Team", email = "topostats@sheffield.ac.uk"},
  {name = "Alice Pyne", email = "a.l.pyne@sheffield.ac.uk"},
  {name = "Sylvia Whittle", email = "sylvia.whittle@sheffield.ac.uk"},
  {name = "Neil Shephard", email = "n.shephard@sheffield.ac.uk"},
  {name = "Max Gamill", email = "mcgamill1@sheffield.ac.uk"},
  {name = "Jean Du", email = "mdu12@sheffield.ac.uk"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
keywords = [
  "afm",
  "image processing"
]
requires-python = ">=3.9"
dependencies = [
  "h5py",
  "igor2",
  "matplotlib",
  "numpy",
  "pandas",
  "pySPM",
  "pyfiglet",
  "pyyaml",
  "ruamel.yaml",
  "schema",
  "scikit-image",
  "scipy",
  "seaborn",
  "snoop",
  "tifffile",
  "topofileformats",
  "tqdm",
]

[project.optional-dependencies]
tests = [
  "py",
  "pytest",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
  "pytest-lazy-fixture",
  "pytest-mpl",
  "pytest-regtest",
  "filetype",
]
docs = [
  "Sphinx",
  "myst_parser",
  "numpydoc",
  "pydata_sphinx_theme",
  "sphinx-autoapi",
  "sphinx-autodoc-typehints",
  "sphinx-multiversion",
  "sphinx_markdown_tables",
  "sphinx_rtd_theme",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-napoleon",
]
dev = [
  "black",
  "ipython",
  "pre-commit",
  "pylint",
  "pyupgrade",
  "pytest-durations",
  "pytest-xdist",
]
pypi = [
  "build",
  "setuptools_scm[toml]",
  "wheel",
]
notebooks = [
  "ipython",
  "ipywidgets",
  "jupyter_contrib_nbextensions",
  "jupyterthemes",
]

[project.urls]
Source = "https://github.com/AFM-SPM/TopoStats"
Bug_Tracker = "https://github.com/AFM-SPM/TopoStats/issues"
Documentation = "https://AFM-SPM.github.io/TopoStats"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["topostats"]
exclude = ["tests"]
namespaces = false

[tool.setuptools.package-data]
topostats = ["*.yaml", "*.mplstyle"]

[tool.setuptools_scm]
write_to = "topostats/_version.py"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--cov", "--mpl", "-ra", "--strict-config", "--strict-markers"]
log_cli_level = "Info"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]
xfail_strict = true

[tool.coverage.run]
source = ["topostats"]
omit = [
  "topostats/_version.py",
  "*tests*",
  "**/__init__*",
]

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
  )/
)
'''

[tool.ruff]
exclude = [
  "*.ipynb",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pycache__",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs/conf.py",
  "node_modules",
  "pygwytracing.py",
  "tests/tracing/test_dnacurvature.py",
  "tests/tracing/test_dnatracing.py",
  "tests/tracing/test_tracing_dna.py",
  "topostats/plotting.py",
  "topostats/tracing/dnatracing.py",
  "topostats/tracing/tracing_dna.py",
  "topostats/tracing/tracingfuncs.py",
  "venv",
]
# per-file-ignores = []
line-length = 120
target-version = "py310"
lint.select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C", #
  "D", # pydocstyle
  "E", # pycodestyle error
  "F",
  "I", # isort
  "NPY", # numpy
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "R",
  "S", #flake8-bandit
  "W", # pycodestyle warning
  "U",
  "UP", # pyupgrade
]
lint.ignore = [
  "B905",
  "E501",
  "S101",
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C", #
  "D", # pydocstyle
  "E", # pycodestyle error
  "F",
  "I", # isort
  "NPY", # numpy
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "R",
  "S", #flake8-bandit
  "W", # pycodestyle warning
  "U",
  "UP", # pyupgrade
]
lint.unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = true

[tool.codespell]
skip = '*.po,*.ts,test'
count = ''
quiet-level = 3

[project.scripts]
topostats = "topostats.entry_point:entry_point"
run_topostats = "topostats.entry_point:legacy_run_topostats_entry_point"
toposum = "topostats.entry_point:legacy_toposum_entry_point"
