[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  ]
build-backend = "setuptools.build_meta"

[project]
name = "topostats"
description = "Automated Analysis for Atomic Force Microscopy Images of Biomolecules"
readme = "README.md"
license = {text = "GPL-3.0-only"}
dynamic = ["version"]
authors = [
  {name = "TopoStats Team", email = "topostats@sheffield.ac.uk"},
  {name = "Alice Pyne", email = "a.l.pyne@sheffield.ac.uk"},
  {name = "Sylvia Whittle", email = "sylvia.whittle@sheffield.ac.uk"},
  {name = "Neil Shephard", email = "n.shephard@sheffield.ac.uk"},
  {name = "Max Gamill", email = "mcgamill1@sheffield.ac.uk"},
  {name = "Jean Du", email = "mdu12@sheffield.ac.uk"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
keywords = [
  "afm",
  "atomic force microscopy",
  "image processing",
]
requires-python = ">=3.10, <3.12"
dependencies = [
  "art",
  "AFMReader",
  "h5py",
  "keras",
  "matplotlib",
  "numpy~=2.0.0",  # Until TensorFlow supports newer versions
  "numpyencoder",
  "pandas",
  "pillow<=11.1.0",
  "pyyaml",
  "ruamel.yaml",
  "schema",
  "scikit-image",
  "scipy",
  "seaborn",
  "skan",
  "snoop",
  "tensorflow",
  "topoly",
  "tqdm",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
  "pytest-mpl",
  "pytest-regtest==2.3.1",
  "pytest-xdist",
  "filetype",
]
docs = [
  "Sphinx",
  "myst_parser",
  "numpydoc",
  "pydata_sphinx_theme",
  "sphinx-autoapi",
  "sphinx-multiversion",
  "sphinx_markdown_tables",
  "sphinx_rtd_theme",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-napoleon",
]
dev = [
  "black",
  "ipython",
  "pre-commit",
  "pylint",
  "pyupgrade",
  "pytest-durations",
  "pytest-icdiff",
  "pytest-testmon",
]
pypi = [
  "build",
  "setuptools_scm[toml]",
  "wheel",
]
notebooks = [
  "ipython",
  "ipywidgets",
  "jupyter_contrib_nbextensions",
  "jupyterthemes",
]

[project.urls]
Source = "https://github.com/AFM-SPM/TopoStats"
Bug_Tracker = "https://github.com/AFM-SPM/TopoStats/issues"
Documentation = "https://AFM-SPM.github.io/TopoStats"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["topostats"]
exclude = ["tests"]
namespaces = false

[tool.setuptools.package-data]
topostats = ["*.yaml", "*.mplstyle"]

[tool.setuptools_scm]
write_to = "topostats/_version.py"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--cov", "--mpl", "-ra", "--strict-config", "--strict-markers"]
log_level = "INFO"
log_cli = true
log_cli_level = "INFO"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]
xfail_strict = true

[tool.coverage.run]
source = ["topostats"]
omit = [
  "topostats/_version.py",
  "*tests*",
  "**/__init__*",
]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
  )/
)
'''

[tool.ruff]
exclude = [
  "*.ipynb",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pycache__",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs/conf.py",
  "node_modules",
  "notebooks/*.py",
  "tests/tracing/test_dnacurvature.py",
  "topostats/plotting.py",
  "topostats/tracing/tracingfuncs.py",
  "venv",
]
# per-file-ignores = []
line-length = 120

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C", #
  "D", # pydocstyle
  "E", # pycodestyle error
  "F",
  "I", # isort
  "NPY", # numpy
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "R",
  "S", #flake8-bandit
  "W", # pycodestyle warning
  "U",
  "UP", # pyupgrade
]
ignore = [
  "A005",
  "B905",
  "E501",
  "S101",
  "S403",
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C", #
  "D", # pydocstyle
  "E", # pycodestyle error
  "F",
  "I", # isort
  "NPY", # numpy
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "R",
  "S", #flake8-bandit
  "W", # pycodestyle warning
  "U",
  "UP", # pyupgrade
]
unfixable = []

# Numpy2 deprecation checks
extend-select = ["NPY201"]
preview = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.codespell]
skip = '*.spm*,*.mplstyle,*.svg,*.stp,*.top,*.002,*.004'
count = ''
quiet-level = 3
ignore-words-list = 'OT'

[tool.numpydoc_validation]
checks = [
  "all", # Perform all check except those listed below
  "ES01",
  "EX01",
  "PR10", # Conflicts with black formatting
  "SA01",
]
exclude = [  # don't report on objects that match any of these regex
    "\\.undocumented_method$",
    "\\.__repr__$",
    "^test_",
    "^conftest",
    "^conf$",
    "^notebooks/*.py$"
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    "^Process ",
    "^Assess ",
    "^Access ",
]

[project.scripts]
topostats = "topostats.entry_point:entry_point"
