[metadata]
name = topostats
version = 0.1.0
description = Automated Analysis for Atomic Force Microscopy Images of Biomolecules
long_description = file: README.md
url = https://github.com/AFM-SPM/TopoStats
author = TopoStats Team
license = GNU Lesser GPLv3

[options]
python_requires = >=3.8

zip_safe = False

install_requires =
  matplotlib
  numpy
  pandas
  pySPM
  ruamel.yaml
  scikit-image==0.19.2
  scipy
  seaborn
  tqdm


packages = find:

[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mpl

docs =
  Sphinx
  sphinx_rtd_theme
  myst_parser
  sphinx_markdown_tables
  sphinxcontrib-mermaid

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*

[flake8]
max_line_length=120
docstring-convention=numpy

[yapf]
based_on_style = pep8
column_limit = 120

[options.entry_points]
console_scripts =
  run_topostats = topostats.run_topostats:main