[metadata]
name = topostats
version = 0.1.0
description = Automated Analysis for Atomic Force Microscopy Images of Biomolecules
long_description = file: README.md
url = https://github.com/AFM-SPM/TopoStats
author = TopoStats Team
license = GNU Lesser GPLv3

[options]
python_requires = >=3.8

zip_safe = False

install_requires =
  afmformats
  libasd
  matplotlib
  numpy
  pandas
  pySPM
  pyyaml
  ruamel.yaml
  schema
  scikit-image==0.19.2
  scipy
  seaborn
  tqdm


packages = find:

[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mpl
  pytest-regtest

docs =
  Sphinx
  sphinx_rtd_theme
  myst_parser
  sphinx_markdown_tables
  sphinxcontrib-mermaid

dev =
  black
  pylint
  flake8

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*

[flake8]
max_line_length=120
docstring-convention=numpy
exclude = .git,__pycache__,docs/conf.py,build,dist,pygwytracing.py

[yapf]
based_on_style = pep8
column_limit = 120

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
  run_topostats = topostats.run_topostats:main