[metadata]
name = topostats
version = 0.1.0
description = Automated Analysis for Atomic Force Microscopy Images of Biomolecules
long_description = file: README.md
url = https://github.com/AFM-SPM/TopoStats
author = TopoStats Team
license = GNU Lesser GPLv3

[options]
python_requires = >=3.8

zip_safe = False

install_requires =
  igor
  matplotlib
  numpy
  pandas
  pySPM
  pyyaml
  ruamel.yaml
  schema
  scikit-image==0.19.2
  scipy
  seaborn
  tqdm


packages = find:

[options.extras_require]
tests =
  py
  pytest
  pytest-cov
  pytest-mpl
  pytest-regtest

docs =
  Sphinx
  sphinx_rtd_theme
  numpydoc
  myst_parser
  pydata_sphinx_theme
  sphinx_markdown_tables
  sphinxcontrib-mermaid
  sphinxcontrib-napoleon
  sphinx-autodoc-typehints

dev =
  black
  pre-commit
  pylint
  flake8

pypi =
  wheel

[options.packages.find]
exclude = tests*

[coverage:run]
omit =
  *conftest.py
  *tests*
  **/__init__*

[flake8]
max_line_length=120
docstring-convention=numpy
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    dist,
    pygwytracing.py,
    topostats/plotting.py,
    topostats/tracing/tracingfuncs.py,
    topostats/tracing/dnatracing.py,
    topostats/tracing/tracing_dna.py,
    tests/tracing/test_dnatracing.py,
extend-ignore =
    E501,
    T201

[yapf]
based_on_style = pep8
column_limit = 120

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
  run_topostats = topostats.run_topostats:main
